# waymay-backend

./: .env  .gitignore  Cargo.toml  README.md
src/: app_state.rs  main.rs
src/auth/: handlers.rs  mod.rs  routes.rs
src/constants/: errors.rs  mod.rs
src/models/: mod.rs  place.rs  user.rs
src/place/: handlers.rs  routes.rs
src/routes/: mod.rs
